@@ -29,6 +29,9 @@ $.extend($.fn, {
 			return validator;
 		}
 
+		// Add novalidate tag if HTML5.
+		this.attr('novalidate', 'novalidate');
+
 		validator = new $.validator( options, this[0] );
 		$.data(this[0], 'validator', validator);
 
@@ -788,6 +791,8 @@ $.extend($.validator, {
 			var value = $element.attr(method);
 			if (value) {
 				rules[method] = value;
+			} else if ($element[0].getAttribute("type") === method) {
+				rules[method] = true;
 			}
 		}
 
